--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
                 <th scope="col">Name</th>
                 <th scope="col">Id</th>
                 <th scope="col">Body</th>
+                <th></th>
             </tr>
         </thead>
         <tbody class="wrapper">
         </tbody>
     </table>
     <template id="rowTemplate">
-        <tr>
+        <tr class="rowcha">
             <th class="num" scope="row">1</th>
             <td class="name">Mark</td>
             <td class="id">Otto</td>
             <td class="mail">@mdo</td>
+            <td><button class="btn btn-sm btn-outline-primary btn-remove">Remove</button></td>
         </tr>
     </template>
     <script src="./js/bootstrap.js"></script>
