--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/bootstrap.css">
     <title>Users-list</title>
 </head>
-<body class="bg-info container">
+<body class="bg-info container d-flex flex-column justify-content-center align-items-center">
     <div class="d-flex align-items-center justify-content-center my-5">
         <h2 class="text-center fw-bolder text-warning">UsersList</h2>
         <button id="logOut" class="btn btn-outline-danger ms-3">Log out</button>
