--- a/login.html
+++ b/login.html
@@ -16,6 +16,7 @@
 		<input id="password" class="input-group form-control w-50" type="password" placeholder="Password">
 
 		<button type="submit" class="mt-3 btn btn-primary">Log in</button>
+		<a class="text-center" href="./register.html">Registration-form</a>
 	</form>
 	<script src="./js/bootstrap.js"></script>
 	<script src="./js/auth.js"></script>
