--- a/register.html
+++ b/register.html
@@ -24,6 +24,7 @@
 		
 		<button type="submit" class="mt-3 btn btn-primary">Sign in</button>
 	</form>
+	<a class="text-center mt-3" href="./login.html">Login form</a>
 	<script src="./js/bootstrap.js"></script>
 	<script src="./js/registration.js"></script>
 </body>
