--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="d-flex align-items-center justify-content-center my-5">
         <h2 class="text-center fw-bolder text-warning">UsersList</h2>
         <button id="logOut" class="btn btn-outline-danger ms-3">Log out</button>
+        <button id="post" class="btn btn-outline-success ms-3">Post</button>
     </div>
     <table class="table table-success table-striped">
         <thead>
